--- a/depcated/nginx/app.yaml
+++ b/depcated/nginx/app.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: nginx
   name: nginx
-  namespace: default
+  namespace: demo
 spec:
   replicas: 2
   selector:
@@ -34,7 +34,7 @@ metadata:
   labels:
     app: nginx
   name: nginx
-  namespace: default
+  namespace: demo
 spec:
   ports:
   - port: 8000
