--- a/depcated/nginx-helm/templates/deployment.yaml
+++ b/depcated/nginx-helm/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "ng.fullname" . }}
+  name: nginx
   labels:
     {{- include "ng.labels" . | nindent 4 }}
 spec:
