--- a/depcated/nginx-helm/templates/service.yaml
+++ b/depcated/nginx-helm/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "ng.fullname" . }}
+  name: nginx
   labels:
     {{- include "ng.labels" . | nindent 4 }}
 spec:
